zoomer animation on all buttons, grid layout for org_view top row, align three sections, icons in role_crud picked_roles, animation fly_left org vicew, fix org_view route to non /orgs, input a zoomer class

--- a/client/s.css
+++ b/client/s.css
@@ -196,7 +196,7 @@ img, .button, .selector, .card, p, .header, .item, .image, .fade {
     /*transition: scale 1s !important;*/
     
 }
-.flip {
+.flip, .button {
     transition: transform .7s ease-in-out !important;
 }
 .flip:hover {
@@ -208,6 +208,19 @@ img, .button, .selector, .card, p, .header, .item, .image, .fade {
     /*border-radius: 15px !important;*/
     /*transition: scale 1s; */
     /*filter: drop-shadow(0px 0px 5px 5px rgba(200,200,200,.7)) !important;*/
+    transition: scale 1s !important;
+    transform: scale(1.1) !important; /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+    z-index:1000 !important;
+
+    
+}
+
+/*.button:not(.circular) {*/
+.button:hover, a:hover, .input:hover{
+    box-shadow: inset 0px 0px 10px 10px rgba(250,250,250,0.8);
+    border-radius: 15px !important;
+    /*transition: scale 1s; */
+    filter: drop-shadow(0px 0px 5px 5px rgba(200,200,200,.7)) !important;
     transition: scale 1s !important;
     transform: scale(1.1) !important; /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
     z-index:1000 !important;
@@ -318,8 +331,8 @@ input {
 }
 .smallscroll{
 	overflow-y:scroll;
-	overflow-x:hidden;
-	max-height:250px;
+	overflow-x:auto;
+	max-height:300px;
 	/*max-height:85vh;*/
 	padding-top: 1em;
 	/*padding-left: 1em;*/
